<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_feedback"
        android:contentDescription="@string/item1"
        android:title="@string/item1"
        android:icon="@drawable/feedback_icon"/>
    <item android:id="@+id/nav_setting"
        android:contentDescription="@string/item2"
        android:title="@string/item2"
        android:icon="@drawable/settings_icon"/>
    <item android:id="@+id/nav_about"
        android:contentDescription="@string/item3"
        android:title="@string/item3"
        android:icon="@drawable/about_icon"/>
    <item android:id="@+id/nav_exit"
        android:contentDescription="@string/item4"
        android:title="@string/item4"
        android:icon="@drawable/exit_icon"/>
</menu>