<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlayerActivity"
    android:gravity="center"
    android:background="?attr/colorOnBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/player_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/back_icon"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/textColorPrimary"
            android:text="@string/mymusic"
            android:textSize="20sp"
            tools:ignore="HardcodedText"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/favbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/favorites"
            android:src="@drawable/baseline_favorite_empty"
            android:background="@android:color/transparent"
            android:layout_marginEnd="15dp"
            app:tint="@android:color/holo_red_dark" />
    </LinearLayout>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songingPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeWidth="5dp"
        app:strokeColor="?attr/themeColor"/>
    <TextView
        android:id="@+id/titlePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textSize="20sp"
        android:textColor="@color/textColorPrimary"
        android:textAlignment="center"
        android:layout_weight="1"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/prevPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/previous"
            android:src="@drawable/previous_icon"
            android:backgroundTint="@color/white"
            app:iconSize="20dp"
            app:maxImageSize="30dp"
            android:layout_marginHorizontal="25dp"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/playpause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play"
            android:src="@drawable/play_icon"
            app:iconSize="40dp"
            app:maxImageSize="35dp"
            app:tint="@color/white"
            android:layout_marginHorizontal="25dp"
            android:backgroundTint="?attr/themeColor"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/nextPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next"
            android:src="@drawable/next_icon"
            app:iconSize="20dp"
            app:maxImageSize="30dp"
            android:backgroundTint="@color/white"
            android:layout_marginHorizontal="25dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/seekbarStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/textColorPrimary"
            android:text="@string/starttime"
            android:gravity="center"
           />
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbarPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/seekbarEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/textColorPrimary"
            android:text="@string/endtime"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/repeatbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/repeat"
            android:src="@drawable/repeat_icon"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            app:tint="?attr/themeColor"
             />
        <ImageButton
            android:id="@+id/equalizerbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/equalizer"
            android:src="@drawable/equalizer_icon"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            app:tint="?attr/themeColor"/>
        <ImageButton
            android:id="@+id/timerbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/timer"
            android:src="@drawable/timer_icon"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            app:tint="?attr/themeColor"/>
        <ImageButton
            android:id="@+id/sharebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/share"
            android:src="@drawable/share_icon"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            app:tint="?attr/themeColor" />

    </LinearLayout>
</LinearLayout>