<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:strokeWidth="2dp"
    app:strokeColor="@color/pink"
    android:layout_margin="10dp">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playlistimg"
        android:layout_width="170dp"
        android:layout_height="130dp"
        app:shapeAppearanceOverlay="@style/curved"
        android:src="@drawable/splash_screen"
        android:contentDescription="@string/song_image"/>
    <TextView
        android:id="@+id/playlistname"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/playlist_name"
        android:contentDescription="@string/playlist_name"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="130dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"/>
    <ImageButton
        android:id="@+id/playlistdelete"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/delete_button"
        android:src="@drawable/delete_icon"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="130dp"
        android:backgroundTint="@android:color/transparent"
        app:tint="@color/textColorPrimary" />

</com.google.android.material.card.MaterialCardView>