<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    android:layout_marginBottom="5dp">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/song_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/player_icon_round"
        app:shapeAppearanceOverlay="@style/curved"
        android:layout_marginStart="5dp"/>
    <TextView
        android:id="@+id/song_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/song_name"
        android:layout_toStartOf="@id/song_duration"
        android:layout_toEndOf="@+id/song_image"
        android:textColor="@color/textColorPrimary"
        android:gravity="center_vertical"
        android:singleLine="true"/>
    <TextView
        android:id="@+id/song_duration"
        android:layout_marginHorizontal="5dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:text="@string/endtime"
        android:textColor="@color/textColorPrimary"/>
    <TextView
        android:textColor="@color/textColorPrimary"
        android:id="@+id/song_album"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/song_album"
        android:layout_toStartOf="@id/song_duration"
        android:layout_toEndOf="@+id/song_image"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:singleLine="true"/>


</RelativeLayout>