<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistDetails">
    <LinearLayout
        android:id="@+id/linerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/themeColor">

        <ImageButton
            android:id="@+id/backPD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/back_icon"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/playlistNamePD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/playlist"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linerlayoutdetail"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linerlayout"
        android:layout_marginTop="10dp"
        android:background="?attr/themeColor">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playlistimg"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:src="@drawable/splash_screen"/>
        <TextView
            android:id="@+id/playlistinfo"
            android:layout_width="156dp"
            android:layout_height="match_parent"
            android:text="@string/playlist_name"
            android:gravity="center|start"
            android:layout_marginHorizontal="5dp"
            android:textSize="16sp"
            android:singleLine="false"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistdetailRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linerlayoutdetail"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        android:scrollbars="vertical"
        android:paddingBottom="280dp"
        android:paddingHorizontal="10dp"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/playlistshuffle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/shuffle"
        android:src="@drawable/baseline_shuffle_24"
        app:tint="@color/pink"
        app:fabSize="normal"
        app:borderWidth="2dp"
        app:maxImageSize="35dp"
        app:backgroundTint="@color/pink"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        android:visibility="invisible"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/addbtnPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/add"
            android:drawableTint="?attr/themeColor"
            android:drawableLeft="@drawable/baseline_add_24"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/removebtnPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/remove_all"
            android:drawableTint="?attr/themeColor"
            android:drawableLeft="@drawable/baseline_remove_circle_outline_24"
            android:text="@string/remove_all"
            android:textAllCaps="false"
            android:textColor="@color/black" />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>